--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -24,6 +24,9 @@ body {
 ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
+::-webkit-scrollbar {
+  left: 0 !important;
+}
 button{
   border-color: $mainColor !important;
 }
