--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,7 +9,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: #000;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -23,10 +23,7 @@ body {
 
 ::-webkit-scrollbar-corner {
   background-color: transparent;
-}
-::-webkit-scrollbar {
-  left: 0 !important;
-}
+} 
 button{
   border-color: $mainColor !important;
 }
