--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -120,7 +120,13 @@ td {
   background-color: #0d6efd !important;
   border-color: #0d6efd !important;
 }
-
+.form-check-input:checked {
+  background-color: #0d6efd !important;
+  border-color: #0d6efd !important;
+}  
+.form-check-input:checked[type=radio] {
+  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%27-4 -4 8 8%27%3e%3ccircle r=%272%27 fill=%27%23fff%27/%3e%3c/svg%3e') !important;
+} 
 
 .daterangepicker td.active,
 .daterangepicker td.active:hover {
