--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -22,7 +22,7 @@ main {
         display: flex;
         align-items: normal;
         justify-content: space-between;
-        padding: 15px 18px;
+        padding: 7px 18px;
 
         // .logo {
         //     font-size: 18px;
@@ -65,14 +65,20 @@ main {
         padding: 5px 18px;
         text-decoration: none;
         border-right: 4px solid transparent;
-        transition: all 0.5s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+        transition: all 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
         cursor: pointer;
         &:hover {
             // border-left: 4px solid $secondColor;
             transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
             color: $secondColor;
             position: relative;
-
+           .logoSvg path{
+                fill: $secondColor; /* اللون الافتراضي */
+                transition: fill 0.2s ease-in-out; /* خاصية التحويل */
+                // width:  15px !important;
+            }
+             
+              
             &::after {
                 content: '';
                 height: 100%;
@@ -121,6 +127,10 @@ main {
             border-bottom-right-radius: 5px;
             background-color: $mainColor;
         }
+  .logoSvg:hover path {
+            fill:$mainColor !important; /* اللون الجديد عند التحويل */
+          }
+          
     }
 
     .menu {
@@ -287,5 +297,15 @@ main {
         width: 100% !important;
     }
 }
-
  
+.active .logoSvg path{
+    display: block;
+    fill: $mainColor !important; /* اللون الافتراضي */
+    transition: fill 0.2s ease-in-out; /* خاصية التحويل */
+    width:  40px !important;
+}
+
+.active .logoSvg:hover path {
+    fill:$mainColor !important; /* اللون الجديد عند التحويل */
+  }
+  
