--- a/src/Pages/auth/Login/login.scss
+++ b/src/Pages/auth/Login/login.scss
@@ -73,32 +73,42 @@
                 }
             }
 
-            .app__login-btn {
-                background: $mainColor;
-                border-radius: 25px;
-                font-family: 'Poppins';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 24px;
+            .app__login-btn{
+                background: #7032f8;
+                background: var(--dse-primary-1,#7032f8);
+                border-color: #7032f8;
+                border-color: var(--dse-primary-1,#7032f8);
+                height: 52px;
+                margin: 1rem auto 0;
+                width: 52px;
+                
+            }
+            // .app__login-btn {
+            //     background: $mainColor;
+            //     border-radius: 25px;
+            //     font-family: 'Poppins';
+            //     font-style: normal;
+            //     font-weight: 400;
+            //     font-size: 16px;
+            //     line-height: 24px;
                 /* identical to box height */
 
-                text-align: center;
-                letter-spacing: -0.165px;
+            //     text-align: center;
+            //     letter-spacing: -0.165px;
 
-                /* White */
-                width: 100%;
-                padding: 13px;
-                margin-top: 56px;
-                color: #FFFFFF; 
-                border: $mainColor;
-                transition: all 0.4s;
+            //     /* White */
+            //     width: 100%;
+            //     padding: 13px;
+            //     margin-top: 56px;
+            //     color: #FFFFFF; 
+            //     border: $mainColor;
+            //     transition: all 0.4s;
 
-                &:hover {
-                    box-shadow: none;
+            //     &:hover {
+            //         box-shadow: none;
 
-                }
-            }
+            //     }
+            // }
         }
     }
 
