--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,6 +2,12 @@
 
 body {
   background: $colorLight;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
 }
 
 ::-webkit-scrollbar {
@@ -163,7 +169,8 @@ td {
     transition: color 0.2s ease;
   }
 }
-.outline-sucessChat{
+
+.outline-sucessChat {
   &:hover {
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
     color: $mainColor !important;
@@ -172,6 +179,7 @@ td {
     transition: color 0.2s ease;
   }
 }
+
 .outline-sucessdDisabled {
   background-color: transparent !important;
   color: rgba($color: $colorGrey-1, $alpha: 0.1) !important;
