--- a/src/Pages/auth/Login/login.scss
+++ b/src/Pages/auth/Login/login.scss
@@ -1,6 +1,6 @@
 @import '../../../style/varibale';
 
-.app__auth { 
+.app__auth {
     background-color: #000000;
     background-size: cover;
     background-position: center center;
@@ -15,8 +15,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
-
+            flex-direction: column; 
             img {
                 width: 227px !important;
                 height: 172px !important;
@@ -25,33 +24,32 @@
             .email {
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
+                gap: 5px;
                 margin-top: 15px;
+
                 label {
-                    font-family: 'Poppins';
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 20px;
-                    line-height: 27px;
-                    /* identical to box height */
-
-                    letter-spacing: -0.165px;
-
-                    /* White */
-
+                    align-self: flex-start;
+                    font-size: .913rem;
+                    font-weight: 500;
+                    margin: 0;
+                    padding-bottom: 4px;
+                    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif !important;
+                    -webkit-font-smoothing: antialiased !important;
                     color: #FFFFFF;
                 }
-                .error__handel{
-                    color: $colorRed-1; 
+
+                .error__handel {
+                    color: $colorRed-1;
                 }
+
                 input {
                     background: #F9F9F9 !important;
                     height: 50px !important;
-                    /* Shadow */
-                    box-shadow: 0px 4px 4px rgba(167, 167, 167, 0.1) !important;
-                    border-radius: 25px !important;
+                    /* Shadow */ 
+                    border-radius: 10px !important;
                     padding: 20px;
                     outline: none;
+                    box-shadow: 0 2px 4px rgba(0,0,0,.16);
                 }
 
                 .password__input {
@@ -73,16 +71,24 @@
                 }
             }
 
-            .app__login-btn{
-                background: #7032f8;
-                background: var(--dse-primary-1,#7032f8);
-                border-color: #7032f8;
-                border-color: var(--dse-primary-1,#7032f8);
+            .app__login-btn { 
                 height: 52px;
                 margin: 1rem auto 0;
                 width: 52px;
-                
+                border-radius: 50%;
+                outline: none;
+                border: none;
+                background-color: $mainColor;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                // margin-top: 20px !important;
+                .app__login-btn-icons path{
+                    stroke: #F9F9F9;
+                    color: #FFFFFF;
+                }
             }
+
             // .app__login-btn {
             //     background: $mainColor;
             //     border-radius: 25px;
@@ -91,7 +97,7 @@
             //     font-weight: 400;
             //     font-size: 16px;
             //     line-height: 24px;
-                /* identical to box height */
+            /* identical to box height */
 
             //     text-align: center;
             //     letter-spacing: -0.165px;
@@ -115,7 +121,7 @@
     .avatar {
         height: 100vh;
         display: flex;
-        justify-content:center;
+        justify-content: center;
         align-items: center;
         // align-items: end;
 
@@ -125,7 +131,7 @@
     }
 }
 
-.anther_way_toLgoin{
+.anther_way_toLgoin {
     color: $mainColor;
     text-align: center;
     cursor: pointer;
@@ -134,13 +140,32 @@
     padding: 10px 0px;
 }
 
-.logoBaytrh{
+.logoBaytrh {
     color: $mainColor !important;
     font-weight: 700 !important;
     font-size: larger;
     user-select: none;
 }
+
 .anther_way_toLgoin {
     background-color: transparent;
     border: none !important;
+}
+
+.login__form{
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+}
+
+.opisity{
+    opacity: 0.5;
+}
+.opisity1{
+    opacity: 1 !important;
+}
+
+.css-1idz92c-MuiCircularProgress-svg {
+    display: block;
+    color: white;
 }
