--- a/src/Pages/auth/Login/login.scss
+++ b/src/Pages/auth/Login/login.scss
@@ -165,7 +165,7 @@
     opacity: 1 !important;
 }
 
-.css-1idz92c-MuiCircularProgress-svg {
-    display: block;
+.customProgress.MuiCircularProgress-colorPrimary {
     color: white !important;
-}
+  }
+  
