--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -167,10 +167,10 @@ td {
 .pagination {
   margin-top: 35px !important;
 
-  .css-yuzg60-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
-    background-color: $mainColor !important;
-    color: #FFFFFF !important;
-  }
+  // .css-yuzg60-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
+  //   background-color: $mainColor !important;
+  //   color: #FFFFFF !important;
+  // }
 }
 
 .app__addOrder-form {
