--- a/src/Pages/auth/MedicalCenter/Register/SignUp.scss
+++ b/src/Pages/auth/MedicalCenter/Register/SignUp.scss
@@ -45,3 +45,10 @@ align-items: center ;
         }
     }
 }
+
+
+@media screen and (max-width: 768px) {
+    .Medical_Center_Picture_Form {
+        flex-direction: column-reverse;
+    }
+}
