--- a/src/Pages/Visits/visit.scss
+++ b/src/Pages/Visits/visit.scss
@@ -4,10 +4,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    .map-container {
-        width: 95%;
-        height: 600px ;
-        border-radius: 10px;
-      }
+    padding: 20px; 
+    // .map-container {
+    //     width: 95%;
+    //     height: 600px ;
+    //     border-radius: 10px;
+    //   }
   }
