added Google map in register

--- a/src/Pages/auth/Login/login.scss
+++ b/src/Pages/auth/Login/login.scss
@@ -17,8 +17,8 @@
             align-items: center;
             flex-direction: column; 
             img {
-                width: 227px !important;
-                height: 172px !important;
+                width: 227px ;
+                height: 172px ;
             }
 
             .email {
