add Current Location in google map

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -395,3 +395,8 @@ td {
   }
 
 }
+.currentLocation__btn{
+  background-color: white !important;
+  border: none !important;
+  padding:  8px  !important;
+}
