add content project

--- a/src/Pages/auth/MedicalCenter/Register/SignUp.scss
+++ b/src/Pages/auth/MedicalCenter/Register/SignUp.scss
@@ -108,3 +108,10 @@ align-items: center ;
         gap: 10px;
     }
 }
+.Sign__Up-form {
+
+    width:80% !important;
+    @media screen and (max-width:767px) {
+        width: 100% !important;
+    }
+}
