Added ( Doctor Request - medical center -handel route - update in google map visit )

--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -291,7 +291,7 @@ main {
 
 @media screen and (max-width:900px) {
     .main-container { 
-        display: none !important;
+        // display: none !important;
     }
     .adminLayout{
         width: 100% !important;
