--- a/src/Pages/MedicalCenter/Centers/center.scss
+++ b/src/Pages/MedicalCenter/Centers/center.scss
@@ -21,14 +21,14 @@
 .app__work-portfolio {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 
     .app__work-item {
         width: 270px;
         flex-direction: column;
 
-        margin: 2rem;
+        // margin: 10px 0px;
         margin-top: 0 !important;
         padding: 1rem;
         border-radius: 0.5rem;
@@ -63,7 +63,7 @@
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
 
     border-radius: 0.5rem;
     opacity: 0;
