Reject Reason added in (blog doc- blog client- store - binding - adoption ) Added

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -400,3 +400,10 @@ td {
   border: none !important;
   padding:  8px  !important;
 }
+.app__reason{
+  a{
+    color: $mainColor !important;
+    cursor: pointer;
+    text-decoration-line:  underline !important;
+  }
+}
