Add Excel sheet in (client - doctor free - medical center - visits -users)

--- a/src/Pages/Visits/visit.scss
+++ b/src/Pages/Visits/visit.scss
@@ -11,3 +11,10 @@
     //     border-radius: 10px;
     //   }
   }
+
+  .btn__excel{
+    background-color: #217345 !important;
+    border-color: #217345 !important;
+    color: #fff !important;
+    margin-bottom: 10px !important;
+  }
