edit some styles in medical center hours

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -216,3 +216,22 @@ td {
 .ClientPhone{
   direction: ltr !important;
 }
+
+.css-qbdosj-Input {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.css-13cymwt-control {
+  border-radius: 10px !important;
+  border: none !important;
+  // height: 40px !important;
+}
+
+.nav-pills .nav-item button {
+  color: #000;
+}
+
+.nav-pills .nav-item button.active {
+  color: #fff;
+}
