add sidebar is responsive in all device

--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -288,10 +288,15 @@ main {
 .react-tooltip {
     z-index: 999999999999999 !important;
 }
-
+.main-container_nav{
+    display: none;
+}
 @media screen and (max-width:900px) {
     .main-container { 
         // display: none !important;
+    }
+    .main-container_nav{
+        display: block !important;
     }
     .adminLayout{
         width: 100% !important;
