--- a/src/Components/Navber/Navber.scss
+++ b/src/Components/Navber/Navber.scss
@@ -76,26 +76,11 @@
 }
 
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
-
-:root {
-    --font-base: "DM Sans", sans-serif;
-
-
-    --primary-color: #edf2f8;
-    --secondary-color: $mainColor;
-    --black-color: #030303;
-    --lightGray-color: #e4e4e4;
-    --gray-color: #6b7688;
-    --brown-color: #46364a;
-    --white-color: #ffffff;
-}
-
 .app__navbar-menu {
     width: 35px;
     height: 35px;
-    border-radius: 50%;
-    position: relative;
-    z-index: 9999999999999 !important;
+    border-radius: 50%; 
+    z-index: 2 !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -105,92 +90,8 @@
     svg {
         width: 70%;
         height: 70%;
-        color: var(--white-color);
-    }
-    .sidebarSm{
-        transform: none;
-       overflow: scroll;
-       display: flex;
-       flex-direction: row-reverse;
-       align-items: baseline;
-   }
-    div {
-        overflow: scroll;
-
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 5;
-        padding: 1rem;
-        width: 50%;
-
-        @media screen and (max-width:767px) {
-            width: 80%;
-        }
-
-
-        height: 100vh;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-        flex-direction: column;
-
-        background: url('../../assets/Images/bgWhite.png');
-        background-color: var(--white-color);
-        background-size: cover;
-        background-repeat: repeat;
-        box-shadow: 0 0 40px rgba(168, 168, 168, 0.15);
-
-        svg {
-            width: 20px;
-            height: 20px;
-            color: $mainColor;
-            margin: 0.5rem 1rem;
-        }
-
-        ul {
-            list-style: none;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-
-            display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
-            flex-direction: column;
-
-            li {
-                margin: 10px 0;
-
-                a {
-                    color: var(--gray-color);
-                    text-decoration: none;
-                    font-size: 1rem;
-                    // text-transform: uppercase;
-                    font-weight: 900;
-                    font-family: var(--font-base);
-                    transition: all 0.3s ease-in-out;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    font-size: larger;
-
-                    &:hover {
-                        color: $mainColor;
-                    }
-                }
-            }
-
-        }
-
-        @media screen and (min-width:900px) {
-            display: none;
-        }
-    }
-
+        color: $colorLight;
+    } 
     @media screen and (min-width:900px) {
         display: none;
     }
@@ -317,7 +218,7 @@
 
             box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
             color: $mainColor!important;
-            border-color: var(--kt-primary-light);
+            border-color: $colorLight;
             background-color: #f1faff !important;
             transition: color 0.2s ease;
 
