--- a/src/Pages/Chat/chat.scss
+++ b/src/Pages/Chat/chat.scss
@@ -495,3 +495,17 @@
 .admin__color{
     color: $secondColor;
 }
+
+// chat list not found
+
+.app__chat_list{
+    .no-result-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        .no-result-image{
+            width: 70%;
+        }
+    }
+}
