added all filters in ( users - client ) and update responsive design

--- a/src/Pages/Visits/visit.scss
+++ b/src/Pages/Visits/visit.scss
@@ -16,8 +16,8 @@
 .btn__excel {
   // background-color: $mainColor !important;
   // border-color: #217345 !important;
-  border-color: #217345 !important;
-  color: #217345 !important;
+  border-color: $mainColor !important;
+  color: $mainColor !important;
   margin-bottom: 10px !important;
   transition: all 0.4s !important;
  
