--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,7 +9,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 }
-
+.modal{
+  z-index: 999999997 !important;
+}
 ::-webkit-scrollbar {
   width: 4px;
 }
