--- a/src/Components/Navber/Navber.scss
+++ b/src/Components/Navber/Navber.scss
@@ -76,10 +76,11 @@
 }
 
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
 .app__navbar-menu {
     width: 35px;
     height: 35px;
-    border-radius: 50%; 
+    border-radius: 50%;
     z-index: 2 !important;
     display: flex;
     justify-content: center;
@@ -91,7 +92,8 @@
         width: 70%;
         height: 70%;
         color: $colorLight;
-    } 
+    }
+
     @media screen and (min-width:900px) {
         display: none;
     }
@@ -217,7 +219,7 @@
         &:hover {
 
             box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
-            color: $mainColor!important;
+            color: $mainColor !important;
             border-color: $colorLight;
             background-color: #f1faff !important;
             transition: color 0.2s ease;
@@ -259,24 +261,27 @@
     }
 }
 
-.btn__avatar-nav{
-    font-family: Combo, cursive   !important;
+.btn__avatar-nav {
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+    font-family: '-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif';
     -webkit-font-smoothing: antialiased !important;
     background-color: $mainColor !important;
     color: $colorLight !important;
-    font-size: 16px !important;
-}
+    font-size: 20px !important;
+    font-weight: bold;
+    .userName__nav {
+        user-select: none;
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin: 0;
+        padding-bottom: 4px;
+        font-family: '-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif';
+        -webkit-font-smoothing: antialiased !important;
+        color: #343a40;
 
-.userName__nav{ 
-    user-select: none;
-    font-size: 1.2rem;
-    font-weight: 500;
-    margin: 0;
-    padding-bottom: 4px;
-    font-family: Combo, cursive   !important;
-    -webkit-font-smoothing: antialiased !important;
-    color: #343a40;
-    @media screen and (max-width:480px) {
-        display: none !important;
+        @media screen and (max-width:480px) {
+            display: none !important;
+        }
     }
 }
