update ads and doctor profile

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -4,6 +4,9 @@
 .color-red {
   color: $mainColor !important;
 }
+.secondColor {
+  color: $secondColor !important;
+}
 
 a {
   text-decoration: none !important;
