--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -420,3 +420,8 @@ td {
 .filter__dropdown{
   width: 90% !important;
 }
+
+.btn__processed{
+  background-color: $secondColor !important;
+  border: $secondColor !important;
+}
