--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -81,11 +81,11 @@ main {
               
             &::after {
                 content: '';
-                height: 100%;
+                height: 90%;
                 width: 4px;
                 position: absolute;
                 left: 0%;
-                top: 0%;
+                top: 6%;
                 border-top-right-radius: 5px;
                 border-bottom-right-radius: 5px;
                 background-color: $secondColor;
@@ -99,7 +99,7 @@ main {
             font-family: $fontBase;
             font-style: normal;
             font-weight: 400;
-            font-size: 19px;
+            font-size: 17px;
             line-height: 30px;
             // color:;
         }
@@ -118,11 +118,11 @@ main {
         position: relative;
         &::after {
             content: '';
-            height: 100%;
+            height: 90%;
             width: 4px;
             position: absolute;
             left: 0%;
-            top: 0%;
+            top: 6%;
             border-top-right-radius: 5px;
             border-bottom-right-radius: 5px;
             background-color: $mainColor;
@@ -204,11 +204,11 @@ main {
 
             &::after {
                 content: '';
-                height: 100%;
+                height: 90%;
                 width: 4px;
                 position: absolute;
                 right: -4px !important;
-                top: 0%;
+                top: 6%;
                 border-top-left-radius: 5px !important;
                 border-bottom-left-radius: 5px !important;
                 border-top-right-radius: 0px !important;
@@ -228,7 +228,7 @@ main {
         color: $mainColor !important; 
         &::after { 
             right: -4px !important;
-            top: 0%;
+            top: 6%;
             border-top-left-radius: 5px !important;
             border-bottom-left-radius: 5px !important;
             border-top-right-radius: 0px !important;
@@ -292,9 +292,9 @@ main {
     display: none;
 }
 @media screen and (max-width:900px) {
-    .main-container { 
-        // display: none !important;
-    }
+    // .main-container { 
+    //     // display: none !important;
+    // }
     .main-container_nav{
         display: block !important;
     }
